--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "commentTranslate.targetLanguage": "es",
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "commentTranslate.hover.enabled": false
 }
